# checkia-ml-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: audio.py  config.py  lang.py  main.py  runtime.py  schemas.py
app/routers/: transcribe.py  translate.py
app/services/: asr.py  translation.py
eval/: README.md  transcribe_eval.py  translate_eval.py
tests/: conftest.py  test_config.py  test_health_models.py  test_lang.py  test_real_models.py  test_runtime.py  test_transcribe.py  test_translate.py  test_translation_service.py
