[project]
name = "checkia-ml-api"
version = "0.1.0"
description = "Bambara-enabling ML API (translation + ASR) behind a stable HTTP contract"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.24,<2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "transformers==4.45.1",
    "torch==2.2.2",
    "peft>=0.15,<0.16",
    "librosa>=0.10",
    "soundfile>=0.12",
    "huggingface-hub>=0.24",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "sacrebleu>=2.4",
    "jiwer>=3.0",
]

[tool.pytest.ini_options]
markers = [
    "real: tests that download and run real models (deselect with -m 'not real')",
]

[tool.uv]
package = false
